JumpScript/tests/baselines/reference/emptyTuplesTypeAssertion01.errors.txt
tests/cases/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion01.jump(1,10): error TS1122: A tuple type element list cannot be empty.


==== tests/cases/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion01.jump (1 errors) ====
    let x = <[]>[];
             ~~
!!! error TS1122: A tuple type element list cannot be empty.
    let y = x[0];